--- a/public/about.html
+++ b/public/about.html
@@ -4,30 +4,31 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+      #header-row {
+        background-color: #e0dfdf;
+      }
+    </style>
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
      <div class="container-fluid text-center">
-	<div class="row">
+	<div class="row" id="header-row">
 		<div class="col">
-		  <img class="img-fluid" src="assets/images/reversi-logo.png" alt="Reversi logo"/>
+		  <h2>About</h2>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col">
-		  <a href="name.html" class="btn btn-lg btn-secondary">Let's play</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-  	 	  <img class="img-fluid" src="assets/images/bottom-splash.png" alt="Reversi logo 2"/>
+	 	  <p>lorum ipsum</p>
 		</div>
 	</div>
  	<div class="row">
 		<div class="col">
-		  <a href="about.html" class="btn btn-lg btn-info">About</a>
+		  <a href="index.html" class="btn btn-lg btn-info">Home</a>
 		</div>
 		<div class="col">
 		  <a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-info">Rules</a>
