--- a/public/name.html
+++ b/public/name.html
@@ -4,40 +4,26 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+      #header-row {
+        background-color: #e0dfdf;
+      }
+    </style>
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
      <div class="container-fluid text-center">
-	<div class="row">
+	<div class="row" id="header-row">
 		<div class="col">
-		  <img class="img-fluid" src="assets/images/reversi-logo.png" alt="Reversi logo"/>
+		  <h2>This is the name page</h2>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col">
-		  <a href="name.html" class="btn btn-lg btn-secondary">Let's play</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-  	 	  <img class="img-fluid" src="assets/images/bottom-splash.png" alt="Reversi logo 2"/>
-		</div>
-	</div>
- 	<div class="row">
-		<div class="col">
-		  <a href="about.html" class="btn btn-lg btn-info">About</a>
-		</div>
-		<div class="col">
-		  <a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-info">Rules</a>
-		</div>
+     </div>
 
-	</div>
-    </div>
-
-	  <h1>This is Reversi!</h1>
-
+	 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
