--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
      <div class="container-fluid text-center">
 	<div class="row">
 		<div class="col">
-		  <img class="img-fluid" src="Assets/Images/reversi-logo.png" alt="Reversi logo"/>
+		  <img class="img-fluid" src="Assets/Images/reversi-logo-2.jpg" alt="Reversi logo with two reversi pieces"/>
 		</div>
 	</div>
 	<div class="row">
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 		<div class="col">
-  	 	  <img class="img-fluid" src="Assets/Images/bottom-splash.png" alt="Reversi logo 2"/>
+  	 	  <img class="img-fluid" src="Assets/Images/bottom-splash.png" alt="the classic board game"/>
 		</div>
 	</div>
  	<div class="row">
