--- a/public/lobby.html
+++ b/public/lobby.html
@@ -4,48 +4,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Enter your usernmame to play Reversi</title>
-
     <style>
       #header-row {
         background-color: #e0dfdf;
       }
     </style>
 
-    <script>
-      function submitForm(){
-        var username = $('#username').val();
-        window.location.href = 'lobby.html?username='+username;
-      }
-    </script>
-
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-     <div class="container-fluid text-center">
-	<div class="row" id="header-row">
-		<div class="col">
-		  <h2>Enter your username.</h2>
-		</div>
-	</div>
-      <div class 'row'>
-        <div class "col">
-        <form onsubmit='submitForm(); return false;' class= 'form-inline'>
-          <div class='form-group'>
-            <label for='username' class= 'col-form-label sr-only'>Enter your username</label>
-            <input class='form-control' type='text' value='' id='username' placeholder="Enter your username" />
-          </div>
-          <button type='submit' class= 'btn btn-default btn-primary'> Done </button>
-        </form>
-        </div>
-      </div>
-
-     </div>
-
-	 
+		  <h2>The Lobby</h2>
+	
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
