Fixed left alignment for messages in lobby

--- a/public/lobby.html
+++ b/public/lobby.html
@@ -11,6 +11,10 @@
       #header-row {
         background-color: #e0dfdf;
       }
+
+      #message-row {
+        text-align: left;
+      }
     </style>
 
 
@@ -24,7 +28,7 @@
       <h2>Lobby</h2>
     </div>
   </div>
-      <div class 'row'>
+      <div class 'row' id='message-row'>
         <div class 'col text-left'>
           <h3>Messages </h3>
           <div id='messages'>
