--- a/public/lobby.html
+++ b/public/lobby.html
@@ -21,6 +21,7 @@
     <!-- Bootstrap CSS -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css' integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ' crossorigin='anonymous'>
   </head>
+
   <body>
      <div class='container-fluid text-center'>
   <div class='row' id='header-row'>
@@ -38,28 +39,25 @@
 
     </div>
 
-      <div class 'row' id='message-row'>
-        <div class 'col text-left'>
-          <h3>Messages </h3>
-          <div id='messages'>
-          </div>
-        </div>
-      </div>
       <div class='row'>
-        <div class='col'>
-          <form onsubmit='send_message(); return false;'>
-
-              <div class='form-group'>
+        <div class='col text-left'>
+          <h3>Messages </h3>
+          <form class ='form-inline' onsubmit='send_message(); return false;'>
                   <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
-                  <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your chat message' autocomplete='off' />
-              </div>
+                  <input class='form-control mx-auto w-75' type='text' value='' id='send_message_holder' placeholder='Enter your chat message' autocomplete='off' />
               <button type='submit' class='btn btn-default btn-primary'>Send</button>
 
           </form>
 
         </div>
       </div>
+ <div class 'row' id='message-row'>
+        <div class 'col text-left'>
 
+          <div id='messages'>
+          </div>
+        </div>
+      </div>
      </div>
 
    
