--- a/public/game.html
+++ b/public/game.html
@@ -7,7 +7,7 @@
 
     <title>Reversi</title>
 
-    <link rel='stylesheet' type='text/css' href='assets/css/game.css'/>
+    <link rel='stylesheet' type='text/css' href='Assets/css/game.css'/>
 
     <!-- Bootstrap CSS -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css' integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ' crossorigin='anonymous'>
@@ -27,8 +27,8 @@
       <div class='row'>
         <div class='col'>
           <span class='align-middle' id='whitesum'></span>
-          <img src='assets/images/empty_to_white.gif' alt='white score'/>
-          <img src='assets/images/empty_to_black.gif' alt='black score'/>
+          <img src='Assets/images/empty_to_white.gif' alt='white score'/>
+          <img src='Assets/images/empty_to_black.gif' alt='black score'/>
           <span class='align-middle' id='blacksum'></span>
           </div>
       </div>
