Aesthetic changes to lobby

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,34 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <title>Welcome to Reversi</title>
+      <style type="text/css">
+        .row {
+        	padding-bottom: 10px;}
+      </style>
   </head>
   <body>
+       <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="name.html">Start a Game</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="https://en.wikipedia.org/wiki/Reversi" target="_blank">Rules</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>  
+    </ul>
+  </div>
+</nav>
      <div class="container-fluid text-center">
 	<div class="row">
 		<div class="col">
