--- a/public/lobby.html
+++ b/public/lobby.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang='en'>
   <head>
@@ -8,12 +9,22 @@
     <title>Reversi Game Lobby</title>
 
     <style>
-      #header-row {
+     #header-row {
         background-color: #e0dfdf;
+        padding-top: 15px;
+        padding-bottom: 15px;
       }
-
       #message-row {
-        text-align: left;
+        text-align: right;
+        padding-top: 10px;
+      }
+      #player-header {
+        padding-top: 10px;
+      }
+      #players {
+        padding-bottom: 15px;
+
+
       }
     </style>
 
@@ -23,25 +34,47 @@
   </head>
 
   <body>
-     <div class='container-fluid text-center'>
-  <div class='row' id='header-row'>
-    <div class='col'>
-      <h2>Lobby</h2>
-    </div>
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="name.html">Start a Game</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="https://en.wikipedia.org/wiki/Reversi" target="_blank">Rules</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>  
+    </ul>
   </div>
+</nav>
+    <div class='container-fluid text-left'>
+      <div class='row' id='header-row'>
+        <div class='col'>
+          <h2>Game Lobby</h2>
+          <p>Meet people here in the game lobby, and invite one to start a game with you.</p>
+        </div>
+      </div>
 
-    <div class='row align-items-end' id='players'>
-      <div class='col-9 text-left'>
+    <div class='row align-items-end'  >
+      <div class='col-3 text-left bg-success text-white' id='player-header'>
         <h3>Players</h3>
       </div>
-      <div class='col-3'>
+      <div class='col-9 text-left'>
+        <h3>Messages </h3>
       </div>
-
     </div>
 
-      <div class='row'>
-        <div class='col text-left'>
-          <h3>Messages </h3>
+    <div class='row'>
+      <div class='col-3 bg-success'  id='players' > </div>
+      <div class='col-9 text-left'>
           <form class ='form-inline' onsubmit='send_message(); return false;'>
                   <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
                   <input class='form-control mx-auto w-75' type='text' value='' id='send_message_holder' placeholder='Enter your chat message' autocomplete='off' />
@@ -51,14 +84,14 @@
 
         </div>
       </div>
- <div class 'row' id='message-row'>
-        <div class 'col text-left'>
-
+  <div class 'row' id='message-row'>
+    <div class 'col-3 bg-success'> </div>
+    <div class 'col-9 text-left'>
           <div id='messages'>
           </div>
-        </div>
-      </div>
-     </div>
+    </div>
+  </div>
+</div>
 
    
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
@@ -70,4 +103,3 @@
 
   </body>
 </html>
-
