--- a/public/about.html
+++ b/public/about.html
@@ -7,6 +7,16 @@
     <style>
       #header-row {
         background-color: #e0dfdf;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        text-align: left;
+      }
+
+      #body-content {
+        padding-top: 15px;
+      }
+      #home-buttons {
+        text-align: center;
       }
     </style>
 
@@ -15,19 +25,41 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-     <div class="container-fluid text-center">
+   <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="name.html">Start a Game</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="https://en.wikipedia.org/wiki/Reversi" target="_blank">Rules</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>  
+    </ul>
+  </div>
+</nav>
+
+     <div class="container-fluid">
 	<div class="row" id="header-row">
 		<div class="col">
 		  <h2>About</h2>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" id="body-content">
 		<div class="col">
-	 	  <p>lorum ipsum</p>
+	 	  <p>Reversi is a classic strategy game. This may be a high-tech computerized version, but people have playing it as a tabletop game for over 100 years. </p>
 		</div>
 	</div>
- 	<div class="row">
-		<div class="col">
+ 	<div class="row" id="home-buttons">
+		<div class="col" text-align="center" >
 		  <a href="index.html" class="btn btn-lg btn-info">Home</a>
 		</div>
 		<div class="col">
